--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 jwt.secret="babamchaynayk"
+#mail configuration
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=25
+spring.mail.username=8e9dea581b506c
+spring.mail.password=3f9a42516a576e
