--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=28640
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-jwt.secret=babamchaynayk
+jwt.secret=testmytest
 #mail configuration
 spring.mail.host=smtp.mailtrap.io
 spring.mail.port=25
